[package]
name = "embassy-bmp280"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.7.0", path = "../embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", path = "../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.4.0", path = "../embassy/embassy-rp", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb = { version = "0.4.0", path = "../embassy/embassy-usb", features = ["defmt"] }
embassy-usb-logger = { version = "0.4.0", path = "../embassy/embassy-usb-logger" }

cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

log = "0.4"
